Bug 89081 - Fails to build on x86_64-w64-mingw32 because of missing EWOULDBLOCK
Summary: Fails to build on x86_64-w64-mingw32 because of missing EWOULDBLOCK
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-11 10:44 UTC by Lew Palm
Modified: 2015-07-14 19:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch to define EWOULDBLOCK if it is undefined. (304 bytes, text/plain)
2015-02-11 10:44 UTC, Lew Palm
Details

Description Lew Palm 2015-02-11 10:44:58 UTC
Created attachment 113345 [details]
Patch to define EWOULDBLOCK if it is undefined.

I am cross-compiling p11-kit on a amd64 Linux machine for Woe64 with x86_64-w64-mingw32.
This bug applies to current git a6df1f21e42a3b57448eb6897b976ac8883908eb as well as to current release 0.22.1.

The build fails because of:
p11-kit/rpc-transport.c: In function 'write_at':
p11-kit/rpc-transport.c:289:56: error: 'EWOULDBLOCK' undeclared (first use in this function)
p11-kit/rpc-transport.c: In function 'read_at':
p11-kit/rpc-transport.c:478:56: error: 'EWOULDBLOCK' undeclared (first use in this function)

The mingw32 environment does not define EWOULDBLOCK, but it has WSAEWOULDBLOCK.
A fix is attachted to this bug report.
Comment 1 Stef Walter 2015-07-14 19:52:09 UTC
Merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.