Fix build on Mingw due to missing EWOULDBLOCK

https://bugs.freedesktop.org/show_bug.cgi?id=89081